kubernetes/gke/app-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: statstream-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'  # For GCP Load Balancer
spec:
  type: NodePort
  selector:
    app: statstream
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statstream-app
  labels:
    app: statstream
spec:
  replicas: 2
  selector:
    matchLabels:
      app: statstream
  template:
    metadata:
      labels:
        app: statstream
    spec:
      containers:
      - name: statstream-app
        image: europe-north1-docker.pkg.dev/innate-might-447809-r8/statstream-repo/statstream:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
